--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "bundle/powerline-fonts"]
 	path = bundle/powerline-fonts
 	url = https://github.com/Lokaltog/powerline-fonts.git
+[submodule "bundle/python-mode"]
+	path = bundle/python-mode
+	url = https://github.com/klen/python-mode.git
